# avito-public

./: Dockerfile  pyproject.toml
app/: main.py
app/api/routes/: health.py  prompt.py
app/core/: providers.py
app/core/settings/: app.py  production.py
app/models/: avito.py  limits.py
app/prompts/: read.py
app/prompts/data/: text.md
app/services/: avito.py  limits.py  notify.py
app/tasks/: base.py
tests/: conftest.py  test_avito_bl.py  test_avito_client.py  test_limitsservice.py  test_prompts_reader.py  test_tg_bot_notificator.py
