[project]
name = "avito"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.25.0",
    "apscheduler>=3.11.2",
    "cachetools>=7.0.1",
    "dishka>=1.7.2",
    "fastapi[standard]>=0.128.1",
    "httpx[http2]>=0.28.1",
    "openai>=2.18.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "taskiq>=0.12.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
